fixed white class for more visible text

--- a/style.css
+++ b/style.css
@@ -793,8 +793,7 @@ h4 {
 }
 
 .tc-white {
-    /* color: #364577!important; */
-    color: #FFFFFF!important;
+    color: #364577!important;
 }
 
 .btn-atomic-tangerine {
